<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">UFG - Face Recognition</string>
    <string name="title_activity_principal_menu">UFG - Face Recognition</string>
    <string name="action_settings">Settings</string>
    <string name="imgbt_face_database">Face Database</string>
    <string name="imgbt_face_recog">Face Recognition</string>
    <string name="imgbt_create_sample">Tirar fotos para sample</string>
    <string name="tv_title_selecione_opcao">Selecione uma das opções</string>
    <string name="tv_dsc_funcionalidade">Você precisa tirar 10 fotos para criar um sample.</string>
    <string name="tv_quantidade_fotos_sample">0</string>
    <string name="tv_title_preencha_campo">Preencha o campo</string>
    <string name="tv_label_sample_name">Nome do sample:</string>
    <string name="bt_start_sample">Comece um Sample</string>
    <string name="edtx_hint_sample_name">Coloque um nome sem espaço e sem caracteres especiais.</string>
    <string name="title_activity_face_database_menu">Face Database Options</string>
    <string name="title_activity_face_recog_by_photo">Reconheça um rosto</string>
    <string name="tv_title_aperte_botao">Aperte o botão para iniciar o reconhecimento por foto
</string>
    <string name="bt_start_face_recog">Iniciar Captura para Reconhecimento
</string>
    <string name="tv_texto_informativo_recog">Aperte o botão para abrir o aplicativo de foto do dispositivo. Esse aplicativo será utilizado para recolher a foto que desejas reconheçer.
</string>
</resources>
