<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FaceRecogByPhotoActivity" >

    <TextView
        android:id="@+id/tv_title_aperte_botao"
        android:text="@string/tv_title_aperte_botao" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="20sp"/>
    
    <TextView android:id="@+id/tv_texto_informativo_recog"
        android:text="@string/tv_texto_informativo_recog" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_aperte_botao"
        android:typeface="monospace" />
    
    <Button 
 	    android:id="@+id/bt_start_face_recog"
 	    android:text="@string/bt_start_face_recog"
 	    android:typeface="monospace"
 	    android:layout_below="@id/tv_texto_informativo_recog"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    />

</RelativeLayout>