<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FaceDatabaseMenuActivity" >

    <TextView
        android:id="@+id/tv_title_preencha_campo"
        android:text="@string/tv_title_preencha_campo"
        android:typeface="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    
 	<EditText
 	    android:id="@+id/edtx_sample_name"
 	    android:inputType="text"
 	    android:hint="@string/edtx_hint_sample_name"
 	    android:typeface="monospace"
 	    android:layout_below="@+id/tv_label_sample_name"
 	    android:layout_height="wrap_content"
		android:layout_width="match_parent"
 	     />   
 	     
 	<TextView
        android:id="@id/tv_label_sample_name"
        android:labelFor="@id/edtx_sample_name"
        android:text="@string/tv_label_sample_name"
        android:typeface="monospace"
        android:layout_below="@id/tv_title_preencha_campo"
        android:layout_height="wrap_content"
		android:layout_width="match_parent"
        />
 	
 	<TextView
        android:id="@+id/tv_dsc_funcionalidade"
        android:text="@string/tv_dsc_funcionalidade"
        android:typeface="monospace"
        android:layout_below="@id/edtx_sample_name"
        android:layout_height="wrap_content"
		android:layout_width="match_parent"
        />
 	
 	<Button 
 	    android:id="@+id/bt_start_sample"
 	    android:text="@string/bt_start_sample"
 	    android:typeface="monospace"
 	    android:layout_below="@id/tv_dsc_funcionalidade"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    />
 	
<!--     <TextView -->
<!--         android:id="@+id/tv_title_selecione_opcao" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/tv_title_selecione_opcao" /> -->
   
<!--     <ImageButton  -->
<!--         android:id="@+id/imgbt_create_sample" -->
<!--         android:contentDescription="@string/imgbt_create_sample" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:layout_margin="20dp" -->
<!--         android:src="@drawable/face_database" -->
<!--         android:layout_below="@id/tv_title_selecione_opcao" -->
<!--         /> -->
    
<!--     <TextView -->
<!--         android:id="@+id/tv_dsc_funcionalidade" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/tv_dsc_funcionalidade" /> -->
    
<!--     <TextView -->
<!--         android:id="@+id/tv_quantidade_fotos_sample" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/tv_quantidade_fotos_sample" /> -->

</RelativeLayout>